Tweaks and header images

--- a/POS.html
+++ b/POS.html
@@ -58,7 +58,7 @@
   </header>
 
   <main role="main">
-    <section class="payments-head">
+    <section class="pos-head">
       <div class="container">
         <div class="row vh-50">
           <div class="col-5 align-self-center">
