--- a/Loans.html
+++ b/Loans.html
@@ -58,7 +58,7 @@
   </header>
 
   <main role="main">
-    <section class="payments-head">
+    <section class="loans-head">
       <div class="container">
         <div class="row vh-50">
           <div class="col-5 align-self-center">
