--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <button type="button" class="btn btn-warning rounded-pill">Call Now</button>
+              <button type="button" class="btn btn-warning rounded-pill">Contact</button>
             </li>
           </ul>
         </div>
@@ -65,8 +65,8 @@
 
     <section class="landing-head">
       <div class="container landing-head-content">
-        <div class="row vh-100">
-          <div class="container align-self-center">
+        <div class="row vh-115">
+          <div class="container align-self-center mb-5">
             <div class="row">
               <div class=" col-md-6 col-lg-7">
                 <h1 class="jumbotron-heading py-3">Payment Solutions for your Business
@@ -103,7 +103,7 @@
                 <div data-mdb-toggle="animation" data-mdb-animation-start="onHover" data-mdb-animation-reset="true"
                   data-mdb-animation="pulse" class="card m-3">
                   <div class=" bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img href="Payments.html" src="img/Paymentsimg.jpeg" class="img-fluid" />
+                    <img href="Payments.html" src="img/AdobeStock_236122441.jpeg" class="img-fluid" />
                     <a href="#!">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
                     </a>
@@ -169,7 +169,7 @@
             <img src="img/PP1365-Side-1.png" class="img-fluid" />
           </div>
           <div class="col-md-6 align-self-center">
-            <h3 class="mb-3">Advanced POS Systems</h3>
+            <h3 class="fade-in-section mb-3">Advanced POS Systems</h3>
             <p class="mb-4">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
               possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam
@@ -186,7 +186,7 @@
         <div class="row">
           <div class="text-center col-lg-auto">
             <img class="img-fluid rounded-circle m-4 shadow-3-strong"
-              src="img/136060963_469206734476146_2050989547524702659_n.jpg"
+              src="img/CEO.jpg"
               style="width: 150px; height: 150px; background-color: grey" />
           </div>
           <div class="vertical-center col-lg">
@@ -228,6 +228,6 @@
 <!-- MDB -->
 <script type="text/javascript" src="js/mdb.min.js"></script>
 <!-- Custom scripts -->
-<script type="text/javascript"></script>
+<script type="text/javascript" src="js/index.js"></script>
 
 </html>
