About page and tweaks

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <button type="button" class="btn btn-warning rounded-pill">Contact</button>
+              <a href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</a>
             </li>
           </ul>
         </div>
@@ -104,7 +104,7 @@
                   data-mdb-animation="pulse" class="card m-3">
                   <div class=" bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="Payments.html" src="img/AdobeStock_236122441.jpeg" class="img-fluid" />
-                    <a href="#!">
+                    <a href="Payments.html">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
                     </a>
                   </div>
@@ -123,7 +123,7 @@
                   data-mdb-animation="pulse" class="card m-3">
                   <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="POS.html" src="img/AdobeStock_231243182.jpeg" class="img-fluid" />
-                    <a href="#!">
+                    <a href="POS.html">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
                     </a>
                   </div>
@@ -142,7 +142,7 @@
                   data-mdb-animation="pulse" class="card m-3">
                   <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="Loans.html" src="img/AdobeStock_170520365.jpeg" class="img-fluid" />
-                    <a href="#!">
+                    <a href="Loans.html">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
                     </a>
                   </div>
