--- a/Payments.html
+++ b/Payments.html
@@ -49,7 +49,7 @@
               <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <button type="button" class="btn btn-warning rounded-pill">Call Now</button>
+              <a href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</a>
             </li>
           </ul>
         </div>
@@ -59,9 +59,9 @@
 
   <main role="main">
     <section class="payments-head">
-      <div class="container">
+      <div class="container py-5">
         <div class="row vh-50">
-          <div class="col-5 align-self-center">
+          <div class="col-sm-12 col-md-5 align-self-center">
             <h1 class="jumbotron-heading text-white">Payment Solutions</h1>
             <p class="text-white-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
               possimus veniam.</p>
