--- a/About.html
+++ b/About.html
@@ -63,10 +63,10 @@
     <section class="text-center py-5">
       <div class="container my-5">
 
-        <h3 class="mb-3">Contact us</h3>
+        <h3 class="mb-3">Tell us about your Business!</h3>
         <p>We will reply to your message as soon as possible. The average response time is 24h.</p>
 
-        <hr class="my-4" />
+        <br class="my-4">
 
         <div class="row d-flex justify-content-center pt-2">
 
