--- a/Payments.html
+++ b/Payments.html
@@ -145,7 +145,7 @@
   </main>
 
   <footer class="footer">
-    <div class="container p-3">
+    <div class="container pt-5 p-3">
       <div class="row mt-5">
         <div class="col-12 col-md">
           <small class="d-block mb-3 text-muted">© 2020-2021</small>
