--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
         <section class="call-to-action">
           <div class="container text-center">
             <h1 class="section-heading">Services</h1>
+            <p class="pt-3">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
+              possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam
+              voluptas accusantium quae excepturi amet earum voluptatem fuga.
+            </p>
           </div>
 
         </section>
@@ -166,10 +171,10 @@
       <div class="container vertical-center vh-125">
         <div class="row mb-5">
           <div class="col-md-6 mb-4 mb-md-0">
-            <img src="img/PP1365-Side-1.png" class="img-fluid" />
+            <img src="img/PP1365-Side-3.png" class="img-fluid pos-img" />
           </div>
           <div class="col-md-6 align-self-center">
-            <h3 class="fade-in-section mb-3">Advanced POS Systems</h3>
+            <h3 class="mb-3">Advanced POS Systems</h3>
             <p class="mb-4">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
               possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam
@@ -181,7 +186,9 @@
       </div>
     </section>
 
-    <section class="quote slant-container">
+
+
+    <section class="quote slant-container shadow-3-strong">
       <div class="unslant-content container vertical-center">
         <div class="row">
           <div class="text-center col-lg-auto">
@@ -199,11 +206,30 @@
       </div>
     </section>
 
+    <section class="customers text-center">
+      <div class="container pt-5">
+        <div class="row p-3 pt-5">
+          <div class="p-3 p-md-5 col-lg-3 col-6">
+            <img src="img/yachtclub.png" class="customer-logo img-fluid" alt="Logo" />
+          </div>
+          <div class="p-3 p-md-5 col-lg-3 col-6">
+            <img src="img/shalel.png" class="customer-logo img-fluid" alt="Logo" />
+          </div>
+          <div class="p-3 p-md-5 col-lg-3 col-6">
+            <img src="img/tru.png" class="customer-logo img-fluid" alt="Logo" />
+          </div>
+          <div class="p-3 p-md-5 col-lg-3 col-6">
+            <img src="img/yachtclub.png" class="customer-logo img-fluid" alt="Logo" />
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <footer class="footer">
-    <div class="container pt-5">
-      <div class="row mt-5">
+    <div class="container pt-5 p-4">
+      <div class="row pt-5">
         <div class="col-12 col-md">
           <small class="d-block mb-3 text-muted">© 2020-2021</small>
         </div>
