Added Landing Page Content

--- a/index.html
+++ b/index.html
@@ -67,19 +67,18 @@
       <div class="container landing-head-content">
         <div class="row vh-115">
           <div class="container align-self-center mb-5">
-            <div class="row">
+            <div class="row landing-head-row">
               <div class=" col-md-6 col-lg-7">
                 <h1 class="jumbotron-heading py-3">Payment Solutions for your Business
                 </h1>
               </div>
               <div class="row">
-                <div class=" col-md-5 col-lg-5">
+                <div class="col-md-5 col-lg-5 pb-3">
                   <p class="Jumbotron-sub-heading py-3">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam
-                    officia sapiente ea
+                    helping businesses thrive and keep more of their money.
                   </p>
-                  <button type="button" class="btn btn-warning rounded-pill">Call Now</button>
-                  <button type="button" class="btn btn-outline-primary rounded-pill">More Info</button>
+                  <button type="button" class="btn btn-warning btn-rounded">Call Now</button>
+                  <button type="button" class="btn btn-outline-light btn-rounded">More Info</button>
                 </div>
               </div>
             </div>
@@ -89,14 +88,13 @@
     </section>
 
     <section class="services slant-container shadow-3">
-      <div class="unslant-content my-5">
-        <section class="call-to-action">
+      <div class="my-5">
+        <section class="unslant-content call-to-action">
           <div class="container text-center">
             <h1 class="section-heading">Services</h1>
-            <p class="pt-3">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
-              possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam
-              voluptas accusantium quae excepturi amet earum voluptatem fuga.
+            <p class="py-3 px-5">
+              Midland provides businesses across the north east with afordable payment processing, small business loans, and inovative POS technology.
+              We offer you the tools to run your business with efficiency while you keep more of your money!
             </p>
           </div>
 
@@ -104,9 +102,8 @@
         <section class="cards-decending">
           <div class="container">
             <div class="row">
-              <div class="col-md-4 p-4 p-lg-5 align-self-center">
-                <div data-mdb-toggle="animation" data-mdb-animation-start="onHover" data-mdb-animation-reset="true"
-                  data-mdb-animation="pulse" class="card m-3">
+              <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
+                <div class="card m-3">
                   <div class=" bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="Payments.html" src="img/AdobeStock_236122441.jpeg" class="img-fluid" />
                     <a href="Payments.html">
@@ -115,17 +112,15 @@
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Payments</h4>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up the bulk of the
-                      card's content.
-                    </p>
-                    <!-- <a href="#!" class="btn btn-primary">Get Started</a> -->
+                    <div class="card-footer px-0 pt-3">
+                      <button type="button" class="btn btn-primary font-weight-bold">Take Payments <i
+                          class="fa fa-angle-right px-2"></i></button>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 p-4 p-lg-5 align-self-center">
-                <div data-mdb-toggle="animation" data-mdb-animation-start="onHover" data-mdb-animation-reset="true"
-                  data-mdb-animation="pulse" class="card m-3">
+              <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
+                <div class="card m-3">
                   <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="POS.html" src="img/AdobeStock_231243182.jpeg" class="img-fluid" />
                     <a href="POS.html">
@@ -134,17 +129,15 @@
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Point of Sale</h4>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up the bulk of the
-                      card's content.
-                    </p>
-                    <!-- <a href="#!" class="btn btn-primary">Learn More</a> -->
+                    <div class="card-footer px-0 pt-3">
+                      <button type="button" class="btn btn-primary font-weight-bold">Stay on Point <i
+                          class="fa fa-angle-right px-2"></i></button>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 p-4 p-lg-5 align-self-center">
-                <div data-mdb-toggle="animation" data-mdb-animation-start="onHover" data-mdb-animation-reset="true"
-                  data-mdb-animation="pulse" class="card m-3">
+              <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
+                <div class="card m-3">
                   <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="Loans.html" src="img/AdobeStock_170520365.jpeg" class="img-fluid" />
                     <a href="Loans.html">
@@ -152,12 +145,11 @@
                     </a>
                   </div>
                   <div class="card-body">
-                    <h4 class="card-title">Loans</h4>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up the bulk of the
-                      card's content.
-                    </p>
-                    <!-- <a href="#!" class="btn btn-primary">Learn More</a> -->
+                    <h4 class="card-title">Business Loans</h4>
+                    <div class="card-footer px-0 pt-3">
+                      <button type="button" class="btn btn-primary font-weight-bold">Get Relief <i
+                          class="fa fa-angle-right px-2"></i></button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -174,13 +166,27 @@
             <img src="img/PP1365-Side-3.png" class="img-fluid pos-img" />
           </div>
           <div class="col-md-6 align-self-center">
-            <h3 class="mb-3">Advanced POS Systems</h3>
+            <h3 class="mb-3">Stay on Top with the Latest in POS technology</h3>
             <p class="mb-4">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
-              possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam
-              voluptas accusantium quae excepturi amet earum voluptatem fuga.
+              Midland has close partnerships with industiry leaders at the forfront of point of sale technology. We
+              work closly with managers to implement efficient solutions in retail, bar, restaurnt, and QSR.
             </p>
-            <button type="button" class="btn btn-primary">Learn More</button>
+            <div class="row pos-features">
+              <div class="col-6">
+                <ul class="fa-ul mb-0">
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-mobile-alt"></i></span>Online Ordering</li>
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-user-clock"></i></span>Employee Payroll
+                  </li>
+                </ul>
+              </div>
+              <div class="col-6">
+                <ul class="fa-ul mb-0">
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-calendar-alt"></i></span>Employee
+                    Scheduling</li>
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-boxes"></i></span>Inventory Managment</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -192,8 +198,7 @@
       <div class="unslant-content container vertical-center">
         <div class="row">
           <div class="text-center col-lg-auto">
-            <img class="img-fluid rounded-circle m-4 shadow-3-strong"
-              src="img/CEO.jpg"
+            <img class="img-fluid rounded-circle m-4 shadow-3-strong" src="img/CEO.jpg"
               style="width: 150px; height: 150px; background-color: grey" />
           </div>
           <div class="vertical-center col-lg">
