Header Filter for mobile

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         <div class="row vh-115">
           <div class="container align-self-center mb-5">
             <div class="row landing-head-row">
-              <div class=" col-md-6 col-lg-7">
-                <h1 class="jumbotron-heading py-3">Payment Solutions for your Business
+              <div class="col-12 col-md-6 col-lg-7 py-3">
+                <h1 class="jumbotron-heading">Payment Solutions for your Business
                 </h1>
               </div>
               <div class="row">
-                <div class="col-md-5 col-lg-5 pb-3">
-                  <p class="Jumbotron-sub-heading py-3">
+                <div class="col-12 col-md-5 col-lg-5 pb-3 py-3 px-sm-4 px-md-3">
+                  <p class="Jumbotron-sub-heading">
                     helping businesses thrive and keep more of their money.
                   </p>
                   <button type="button" class="btn btn-warning btn-rounded">Call Now</button>
