Minor Grammar Error

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h1 class="section-heading">Services</h1>
             <p class="py-3 px-5">
               Midland provides businesses across the north east with afordable payment processing, small business loans, and inovative POS technology.
-              We offer you the tools to run your business with efficiency while you keep more of your money!
+              We offer you the tools to run your business with efficiency while keeping more of your money!
             </p>
           </div>
 
