Fixed header img

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <a href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</a>
+              <button href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</button>
             </li>
           </ul>
         </div>
@@ -73,7 +73,7 @@
                 </h1>
               </div>
               <div class="row">
-                <div class="col-12 col-md-5 col-lg-5 pb-3 py-3 px-sm-4 px-md-3">
+                <div class="col-md-5 col-lg-5 pb-3 py-3 px-5 px-md-3">
                   <p class="Jumbotron-sub-heading">
                     helping businesses thrive and keep more of their money.
                   </p>
