--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-scrolled">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-scroll">
       <div class="container">
         <a href="index.html" class="navbar-brand logo">MIDLAND</a>
 
@@ -49,7 +49,7 @@
               <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <button type="button" class="btn btn-warning rounded-pill">Call Now</button>
+              <button href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</button>
             </li>
           </ul>
         </div>
