--- a/Loans.html
+++ b/Loans.html
@@ -49,7 +49,7 @@
               <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <a href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</a>
+              <button href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</button>
             </li>
           </ul>
         </div>
