Align header content center on mobile safari

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
   <main role="main">
 
     <section class="landing-head">
-      <div class="container landing-head-content">
+      <div class="container">
         <div class="row vh-115">
-          <div class="container align-self-center mb-5">
+          <div class="container landing-head-content mb-5">
             <div class="row landing-head-row">
               <div class="col-12 col-md-6 col-lg-7 py-3">
                 <h1 class="jumbotron-heading">Payment Solutions for your Business
@@ -181,8 +181,7 @@
               </div>
               <div class="col-6">
                 <ul class="fa-ul mb-0">
-                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-calendar-alt"></i></span>Employee
-                    Scheduling</li>
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-calendar-alt"></i></span>Employee Scheduling</li>
                   <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-boxes"></i></span>Inventory Managment</li>
                 </ul>
               </div>
