--- a/Loans.html
+++ b/Loans.html
@@ -63,8 +63,7 @@
         <div class="row vh-50">
           <div class="col-sm-12 col-md-5 align-self-center">
             <h1 class="jumbotron-heading text-white">Small Business Loans</h1>
-            <p class="text-white-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
-              possimus veniam.</p>
+            <p class="text-white-50">Need to invest in new kitchen equipment or make renovations? Get quick access to capital with a Cash Advance business loan.</p>
           </div>
         </div>
       </div>
