--- a/POS.html
+++ b/POS.html
@@ -63,8 +63,7 @@
         <div class="row vh-50">
           <div class="col-sm-12 col-md-5 align-self-center">
             <h1 class="jumbotron-heading text-white">Advanced Point of Sale</h1>
-            <p class="text-white-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
-              possimus veniam.</p>
+            <p class="text-white-50">Start managing all aspects of your business be it table managment, payroll or inventory with a modern point of sale system.</p>
           </div>
         </div>
       </div>
