--- a/Payments.html
+++ b/Payments.html
@@ -63,8 +63,7 @@
         <div class="row vh-50">
           <div class="col-sm-12 col-md-5 align-self-center">
             <h1 class="jumbotron-heading text-white">Payment Solutions</h1>
-            <p class="text-white-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
-              possimus veniam.</p>
+            <p class="text-white-50">Midland delivers the latest in payment technology, enabeling retailers and restaurants to accept more payments at an affordable rate.</p>
           </div>
         </div>
       </div>
@@ -75,15 +74,16 @@
     <section class="product-article vh-75">
       <div class="container vertical-center">
         <div class="row">
-          <div class="col-md-6 mb-4 mb-md-0">
-            <img style="background-color: grey; height: 200px; width: 100%;" class="img-fluid shadow-2-strong" />
+          <div class="col-md-6 mb-4 mb-md-0 p-3 p-md-5">
+            <img src="img/PCI.png" class="img-fluid" />
           </div>
-          <div class="col-md-6">
-            <h3 class="mb-3">Product Description</h3>
+          <div class="col-md-6 align-self-center">
+            <h3 class="mb-3">Truly Secure Payments</h3>
             <p class="mb-4">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
-              possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam
-              voluptas accusantium quae excepturi amet earum voluptatem fuga.
+              Rest easy with confidence that your payments are being processed securly.
+              At Midland, we work hard to ensure our customers meet the highest compliance standards. 
+              In addition to monitoring each of our acconts for complinace we provide our customers 
+              with only the most secure payment equipment. Start processing securely today!
             </p>
           </div>
         </div>
@@ -94,19 +94,15 @@
 
     <section class="product-features-pannel text-center">
       <div class="container my-5">
-        <h3 class="mb-5">Product Features</h3>
+        <h3 class="mb-5">Accept Payments On Any Device</h3>
 
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
-              <img 
-              style="background-color: grey; height: 200px; width: 100%;"
+              <img src="img/Terminal.png" style="background-color: grey; height: 200px; width: 100%;"
               class="img-fluid" />
-              <a href="#!">
-                <div class="mask"></div>
-              </a>
             </div>
-            <h5 class="mb-3">Feature</h5>
+            <h5 class="mb-3">Terminal</h5>
             <p class="mb-4">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Reprehenderit molestias quas exercitationem velit alias int corrupti quis ullam earum soluta.
@@ -114,12 +110,9 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
-              <img style="background-color: grey; height: 200px; width: 100%;" class="img-fluid" />
-              <a href="#!">
-                <div class="mask"></div>
-              </a>
+              <img src="img/POS.png" style="background-color: grey; height: 200px; width: 100%;" class="img-fluid" />
             </div>
-            <h5 class="mb-3">Feature</h5>
+            <h5 class="mb-3">Point of Sale</h5>
             <p class="mb-4">
               Maiores placeat illo quod fugit optio ipsa inventore magni nulla esse?
               Quae explicabo iure sequi magnam expedita nostrum architecto maxime neque.
@@ -127,12 +120,9 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
-              <img style="background-color: grey; height: 200px; width: 100%;" class="img-fluid" />
-              <a href="#!">
-                <div class="mask"></div>
-              </a>
+              <img src="img/Mobile.png" style="background-color: grey; height: 200px; width: 100%;" class="img-fluid" />
             </div>
-            <h5 class="mb-3">Feature</h5>
+            <h5 class="mb-3">Mobile</h5>
             <p class="mb-4">
               Totam, dolores quam hic amet aliquid aliquid impedit architecto provident sint ipsam cupiditate nulla,
               recusandae provident corporis praesentium!
