--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <button href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</button>
+              <a href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</a>
             </li>
           </ul>
         </div>
@@ -73,12 +73,14 @@
                 </h1>
               </div>
               <div class="row">
-                <div class="col-md-5 col-lg-5 pb-3 py-3 px-5 px-md-3">
+                <div class="col-md-5 col-lg-5 pb-3 px-5 px-md-3">
                   <p class="Jumbotron-sub-heading">
                     helping businesses thrive and keep more of their money.
                   </p>
+                  <div class="pt-5 pb-3">
                   <button type="button" class="btn btn-warning btn-rounded">Call Now</button>
                   <button type="button" class="btn btn-outline-light btn-rounded">More Info</button>
+                </div>
                 </div>
               </div>
             </div>
@@ -171,7 +173,7 @@
               Midland has close partnerships with industiry leaders at the forfront of point of sale technology. We
               work closly with managers to implement efficient solutions in retail, bar, restaurnt, and QSR.
             </p>
-            <div class="row pos-features">
+            <div class="row py-4 pos-features">
               <div class="col-6">
                 <ul class="fa-ul mb-0">
                   <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-mobile-alt"></i></span>Online Ordering</li>
