--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
               <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <a href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</a>
+              <a href="About.html">
+                <button type="button" class="btn btn-warning rounded-pill">Contact</button>
+              </a>
             </li>
           </ul>
         </div>
@@ -78,9 +80,13 @@
                     helping businesses thrive and keep more of their money.
                   </p>
                   <div class="pt-5 pb-3">
-                  <button type="button" class="btn btn-warning btn-rounded">Call Now</button>
-                  <button type="button" class="btn btn-outline-light btn-rounded">More Info</button>
-                </div>
+                    <a href="About.html">
+                      <button type="button" class="btn btn-warning btn-rounded">Call Now</button>
+                    </a>
+                    <a href="Payments.html">
+                      <button type="button" class="btn btn-outline-light btn-rounded">More Info</button>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -95,7 +101,8 @@
           <div class="container text-center">
             <h1 class="section-heading">Services</h1>
             <p class="py-3 px-5">
-              Midland provides businesses across the north east with afordable payment processing, small business loans, and inovative POS technology.
+              Midland provides businesses across the north east with afordable payment processing, small business loans,
+              and inovative POS technology.
               We offer you the tools to run your business with efficiency while keeping more of your money!
             </p>
           </div>
@@ -106,7 +113,7 @@
             <div class="row">
               <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
                 <div class="card m-3">
-                  <div class=" bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                  <div class=" bg-image hover-zoom hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="Payments.html" src="img/AdobeStock_236122441.jpeg" class="img-fluid" />
                     <a href="Payments.html">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
@@ -115,15 +122,17 @@
                   <div class="card-body">
                     <h4 class="card-title">Payments</h4>
                     <div class="card-footer px-0 pt-3">
-                      <button type="button" class="btn btn-primary font-weight-bold">Take Payments <i
-                          class="fa fa-angle-right px-2"></i></button>
+                      <a href="Payments.html">
+                        <button type="button" class="btn btn-primary font-weight-bold">Take Payments <i
+                            class="fa fa-angle-right px-2"></i></button>
+                      </a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
                 <div class="card m-3">
-                  <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                  <div class="bg-image hover-zoom hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="POS.html" src="img/AdobeStock_231243182.jpeg" class="img-fluid" />
                     <a href="POS.html">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
@@ -132,15 +141,17 @@
                   <div class="card-body">
                     <h4 class="card-title">Point of Sale</h4>
                     <div class="card-footer px-0 pt-3">
-                      <button type="button" class="btn btn-primary font-weight-bold">Stay on Point <i
-                          class="fa fa-angle-right px-2"></i></button>
+                      <a href="POS.html">
+                        <button type="button" class="btn btn-primary font-weight-bold">Stay on Point <i
+                            class="fa fa-angle-right px-2"></i></button>
+                      </a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
                 <div class="card m-3">
-                  <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                  <div class="bg-image hover-zoom hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="Loans.html" src="img/AdobeStock_170520365.jpeg" class="img-fluid" />
                     <a href="Loans.html">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
@@ -149,8 +160,10 @@
                   <div class="card-body">
                     <h4 class="card-title">Business Loans</h4>
                     <div class="card-footer px-0 pt-3">
-                      <button type="button" class="btn btn-primary font-weight-bold">Get Relief <i
-                          class="fa fa-angle-right px-2"></i></button>
+                      <a href="Loans.html">
+                        <button type="button" class="btn btn-primary font-weight-bold">Get Relief <i
+                            class="fa fa-angle-right px-2"></i></button>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -183,7 +196,8 @@
               </div>
               <div class="col-6">
                 <ul class="fa-ul mb-0">
-                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-calendar-alt"></i></span>Employee Scheduling</li>
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-calendar-alt"></i></span>Employee
+                    Scheduling</li>
                   <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-boxes"></i></span>Inventory Managment</li>
                 </ul>
               </div>
@@ -240,16 +254,24 @@
           <small class="d-block mb-3 text-muted">© 2020-2021</small>
         </div>
         <div class="col-6 col-md">
-          <h5>Payments</h5>
+          <a href="Payments.html" class="inherit-style">
+            <h5>Payments</h5>
+          </a>
         </div>
         <div class="col-6 col-md">
-          <h5>Point of Sale</h5>
+          <a href="POS.html" class="inherit-style">
+            <h5>Point of Sale</h5>
+          </a>
         </div>
         <div class="col-6 col-md">
-          <h5>Loans</h5>
+          <a href="Loans.html" class="inherit-style">
+            <h5>Loans</h5>
+          </a>
         </div>
         <div class="col-6 col-md">
-          <h5>About</h5>
+          <a href="About.html" class="inherit-style">
+            <h5>About</h5>
+          </a>
         </div>
       </div>
     </div>
