--- a/Loans.html
+++ b/Loans.html
@@ -49,7 +49,9 @@
               <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <button href="About.html" type="button" class="btn btn-warning rounded-pill">Contact</button>
+              <a href="About.html">
+                <button type="button" class="btn btn-warning rounded-pill">Contact</button>
+              </a>
             </li>
           </ul>
         </div>
@@ -142,22 +144,30 @@
   </main>
 
   <footer class="footer">
-    <div class="container p-3">
-      <div class="row mt-5">
+    <div class="container pt-5 p-4">
+      <div class="row pt-5">
         <div class="col-12 col-md">
           <small class="d-block mb-3 text-muted">© 2020-2021</small>
         </div>
         <div class="col-6 col-md">
-          <h5>Payments</h5>
+          <a href="Payments.html" class="inherit-style">
+            <h5>Payments</h5>
+          </a>
         </div>
         <div class="col-6 col-md">
-          <h5>Point of Sale</h5>
+          <a href="POS.html" class="inherit-style">
+            <h5>Point of Sale</h5>
+          </a>
         </div>
         <div class="col-6 col-md">
-          <h5>Loans</h5>
+          <a href="Loans.html" class="inherit-style">
+            <h5>Loans</h5>
+          </a>
         </div>
         <div class="col-6 col-md">
-          <h5>About</h5>
+          <a href="About.html" class="inherit-style">
+            <h5>About</h5>
+          </a>
         </div>
       </div>
     </div>
