Major content update for all three pages

--- a/Loans.html
+++ b/Loans.html
@@ -73,25 +73,22 @@
       </div>
     </section>
 
-    <section class="product-article vh-75">
-      <div class="container vertical-center">
+    <section class="product-article vh-75 vertical-center">
+      <div class="container">
         <div class="row">
-          <div class="col-md-6 mb-4 mb-md-0">
-            <img style="background-color: grey; height: 200px; width: 100%;" class="img-fluid shadow-2-strong" />
+          <div class="col-md-6 mb-4 mb-md-0 px-3">
+            <img src="img/founding.jpeg" class="img-fluid shadow-2-strong" />
           </div>
           <div class="col-md-6">
-            <h3 class="mb-3">Product Description</h3>
-            <p class="mb-4">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
-              possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam
-              voluptas accusantium quae excepturi amet earum voluptatem fuga.
-            </p>
+            <h3 class="mb-3">Get the funds you need</h3>
+            <p class="mb-4"> Through our Cash Advance program Midland offers businesses quick and easy access to the capital they need to take their business to the next level. Invest in new equipment or in modernizing the look and feal of your business. the possibilities are endless.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+            <p class="mb-4">Contact us today to get founding as soon as 48 hours! </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="product-features-pannel text-center">
+    <!-- <section class="product-features-pannel text-center">
       <div class="container my-5">
         <h3 class="mb-5">Product Features</h3>
 
@@ -139,7 +136,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
   </main>
 
