--- a/POS.html
+++ b/POS.html
@@ -65,7 +65,8 @@
         <div class="row vh-50">
           <div class="col-sm-12 col-md-5 align-self-center">
             <h1 class="jumbotron-heading text-white">Advanced Point of Sale</h1>
-            <p class="text-white-50">Start managing all aspects of your business be it table managment, payroll or inventory with a modern point of sale system.</p>
+            <p class="text-white-50">Start managing all aspects of your business be it table managment, payroll or
+              inventory with a modern point of sale system.</p>
           </div>
         </div>
       </div>
@@ -73,69 +74,131 @@
       </div>
     </section>
 
-    <section class="product-article vh-75">
+    <!-- <section class="product-article vh-75">
       <div class="container vertical-center">
         <div class="row">
-          <div class="col-md-6 mb-4 mb-md-0">
-            <img style="background-color: grey; height: 200px; width: 100%;" class="img-fluid shadow-2-strong" />
+          <div class="col-md-6 mb-4 mb-md-0 px-3">
+            <img src="img/Cloud.jpg" class="img-fluid shadow-2-strong" />
           </div>
           <div class="col-md-6">
-            <h3 class="mb-3">Product Description</h3>
+            <h3 class="mb-3">Cloud Based</h3>
             <p class="mb-4">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor
-              possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam
-              voluptas accusantium quae excepturi amet earum voluptatem fuga.
-            </p>
+              Take advantage of the cloud to manage your business no matter where you are in the world. Access reporting
+              data adjust employee privileges, make menu adjustment etc.. All of this is possible while the hybrid
+              nature means better security and the ability to manage form a familiar desktop application.</p>
           </div>
         </div>
       </div>
     </section>
 
+    <section class="product-article vh-75">
+      <div class="container vertical-center">
+        <div class="row">
+          <div class="col-md-6">
+            <h3 class="mb-3">Hands on support</h3>
+            <p class="mb-4">
+              We go the extra mile by providing, 24/7 phone support, on-site support and consulting. During installation
+              we work with management to train staff for a smooth transition to our point of sales solutions. It doesn't
+              just end there though we want our customers to suceeed and benifit from our solutions and we provide
+              onging consultating on site and over the phone to achieve this goal.</p>
+          </div>
+          <div class="col-md-6 mb-4 mb-md-0 px-3">
+            <img src="img/Support.png" class="img-fluid shadow-2-strong" />
+          </div>
+
+        </div>
+      </div>
+    </section> -->
+
+    <section class="card-article-section">
+      <div class="container vh-110 vertical-center">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-12 ">
+            <div class="card card-article my-5">
+              <div class="row">
+                <div class="col-lg-5 bg-image hover-zoom ">
+                  <img href="Payments.html" src="img/Cloud.jpg" class="card-img" />
+                  <a href="Payments.html">
+                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
+                  </a>
+                </div>
+                <div class="col-lg-7 card-body p-md-5 align-self-center">
+                  <h4 class="card-title">Cloud-Hybrid POS</h4>
+                  <p class="card-text">Take advantage of the cloud to manage your business no matter where you are in the
+                    world. Access reporting
+                    data adjust employee privileges, make menu adjustment etc.. All of this is possible while the hybrid
+                    nature means better security and the ability to manage form a familiar desktop application.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-12 ">
+            <div class="card card-article my-5">
+              <div class="row">
+                <div class="order-lg-2 col-lg-5 bg-image hover-zoom ">
+                  <img href="Payments.html" src="img/Support.png" class="img-fluid card-img" />
+                  <a href="Payments.html">
+                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
+                  </a>
+                </div>
+                <div class="order-lg-1 col-lg-7 card-body p-md-5 align-self-center">
+                  <h4 class="card-title">Hands on support</h4>
+                  <p class="card-text">We go the extra mile by providing, 24/7 phone support, on-site support and consulting. During installation
+                    we work with management to train staff for a smooth transition to our point of sales solutions. It doesn't
+                    just end there though we want our customers to suceeed and benifit from our solutions and we provide
+                    onging consultating on site and over the phone to achieve this goal.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr class="container my-5">
+
     <section class="product-features-pannel text-center">
       <div class="container my-5">
-        <h3 class="mb-5">Product Features</h3>
+        <h3 class="mb-5">Cutting Edge Features</h3>
 
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
-              <img 
-              style="background-color: grey; height: 200px; width: 100%;"
-              class="img-fluid" />
+              <img src="img/Online Ordering.png"
+                class="img-fluid" />
               <a href="#!">
                 <div class="mask"></div>
               </a>
             </div>
-            <h5 class="mb-3">Feature</h5>
+            <h5 class="mb-3">Online Ordering</h5>
             <p class="mb-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Reprehenderit molestias quas exercitationem velit alias int corrupti quis ullam earum soluta.
-            </p>
+              Start taking online orders directly through you pos without any extra setup. Accept orders and print
+              directly to the kitchen!</p>
           </div>
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
-              <img style="background-color: grey; height: 200px; width: 100%;" class="img-fluid" />
+              <img src="img/Inventory.png"
+                class="img-fluid" />
               <a href="#!">
                 <div class="mask"></div>
               </a>
             </div>
-            <h5 class="mb-3">Feature</h5>
+            <h5 class="mb-3">Inventory</h5>
             <p class="mb-4">
-              Maiores placeat illo quod fugit optio ipsa inventore magni nulla esse?
-              Quae explicabo iure sequi magnam expedita nostrum architecto maxime neque.
-            </p>
+              Receive inventory, make new orders directly, and build recipies that auto deplete your stock. It's all
+              available. </p>
           </div>
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
-              <img style="background-color: grey; height: 200px; width: 100%;" class="img-fluid" />
+              <img src="img/Scheduling.png"
+                class="img-fluid" />
               <a href="#!">
                 <div class="mask"></div>
               </a>
             </div>
-            <h5 class="mb-3">Feature</h5>
+            <h5 class="mb-3">Scheduling</h5>
             <p class="mb-4">
-              Totam, dolores quam hic amet aliquid aliquid impedit architecto provident sint ipsam cupiditate nulla,
-              recusandae provident corporis praesentium!
-            </p>
+              Need to take a sick day? Swapping shifts is a brieze with our mobile app for employees and managers. </p>
           </div>
         </div>
       </div>
