--- a/Payments.html
+++ b/Payments.html
@@ -73,8 +73,8 @@
       </div>
     </section>
 
-    <section class="product-article vh-75">
-      <div class="container vertical-center">
+    <section class="product-article vh-75 vertical-center">
+      <div class="container">
         <div class="row">
           <div class="col-md-6 mb-4 mb-md-0 p-3 p-md-5">
             <img src="img/PCI.png" class="img-fluid" />
@@ -101,34 +101,28 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
-              <img src="img/Terminal.png" style="background-color: grey; height: 200px; width: 100%;"
+              <img src="img/Terminal.png"
               class="img-fluid" />
             </div>
             <h5 class="mb-3">Terminal</h5>
             <p class="mb-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Reprehenderit molestias quas exercitationem velit alias int corrupti quis ullam earum soluta.
-            </p>
+            &nbsp; Counter top terminals are a great start for accepting payments. Our terminals take chip as well as NFC tap transactions.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; </p>
           </div>
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
-              <img src="img/POS.png" style="background-color: grey; height: 200px; width: 100%;" class="img-fluid" />
+              <img src="img/POS.png" class="img-fluid" />
             </div>
             <h5 class="mb-3">Point of Sale</h5>
             <p class="mb-4">
-              Maiores placeat illo quod fugit optio ipsa inventore magni nulla esse?
-              Quae explicabo iure sequi magnam expedita nostrum architecto maxime neque.
-            </p>
+            Manage business operations like inventory payroll etc. while taking secure payments.&nbsp;&nbsp; </p>
           </div>
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
-              <img src="img/Mobile.png" style="background-color: grey; height: 200px; width: 100%;" class="img-fluid" />
+              <img src="img/Mobile.png" class="img-fluid" />
             </div>
             <h5 class="mb-3">Mobile</h5>
             <p class="mb-4">
-              Totam, dolores quam hic amet aliquid aliquid impedit architecto provident sint ipsam cupiditate nulla,
-              recusandae provident corporis praesentium!
-            </p>
+            Accept payment form anywere with Midlands mobile phone chipper attachement.&nbsp;&nbsp; </p>
           </div>
         </div>
       </div>
