--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="container">
             <div class="row">
               <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
-                <div class="card m-3">
+                <div class="card card-rounded m-3">
                   <div class=" bg-image hover-zoom hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="Payments.html" src="img/AdobeStock_236122441.jpeg" class="img-fluid" />
                     <a href="Payments.html">
@@ -131,7 +131,7 @@
                 </div>
               </div>
               <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
-                <div class="card m-3">
+                <div class="card card-rounded m-3">
                   <div class="bg-image hover-zoom hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="POS.html" src="img/AdobeStock_231243182.jpeg" class="img-fluid" />
                     <a href="POS.html">
@@ -150,7 +150,7 @@
                 </div>
               </div>
               <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
-                <div class="card m-3">
+                <div class="card card-rounded m-3">
                   <div class="bg-image hover-zoom hover-overlay ripple" data-mdb-ripple-color="light">
                     <img href="Loans.html" src="img/AdobeStock_170520365.jpeg" class="img-fluid" />
                     <a href="Loans.html">
@@ -251,7 +251,7 @@
     <div class="container pt-5 p-4">
       <div class="row pt-5">
         <div class="col-12 col-md">
-          <small class="d-block mb-3 text-muted">© 2020-2021</small>
+          <small class="d-block mb-3 text-muted">© Copyright Midland Payment Services. All Rights Reserved</small>
         </div>
         <div class="col-6 col-md">
           <a href="Payments.html" class="inherit-style">
